# py-fdtd

./: .gitignore  README.md
learning/fdtd-tests/: fdtd3d_upml.py  toyfdtd_numba.py  toyfdtd_numba_cuda.py
learning/numba/: cuda_spect_test.py  cuda_sum_ex.py  cudacast10.prof  cudacast10.py  gpu1.py  gpu2.py  gpu3.py  test1.py  tfdtd2.prof  toy_cuda.py  toy_cuda_2d.py  toy_cuda_2d_ufunc.py  toyfdtd.py  toyfdtd_numba.prof  toyfdtd_numba_cuda.py  toyfdtd_numba_cuda2.py  toyfdtd_numba_cuda3.py  toyfdtd_numba_pool.py  toyfdtdv2.py  yee2upml.c
learning/numba/spectra/: Ag  Ag_cp  Ag_cp3  Ag_drude  Al  Al2O3  Al2O3_Palik  AlCu  AlGaAs_0Al  AlGaAs_100Al  AlGaAs_10Al  AlGaAs_20Al  AlGaAs_30Al  AlGaAs_40Al  AlGaAs_50Al  AlGaAs_60Al  AlGaAs_70Al  AlGaAs_80Al  AlGaAs_90Al  AlGaInP_0Al  AlGaInP_100Al  AlGaInP_10Al  AlGaInP_30Al  AlGaInP_60Al  AlGaInP_70Al  AlON  AlSb  AlSi  AlSiTi  Au  BK7  BaF2  CCl4  CO  CO2  CaF2  Carbon  CdSe  CdTe  CoSi2  (+118 more)
