spectradir=$(datadir)/gsvit/data/spectra

spectra_DATA=Ag\
Ag_drude\
Ag_cp\
Ag_cp3\
Al\
Al2O3\
Al2O3_Palik\
AlAs\
AlCu\
AlGaAs_0Al\
AlGaAs_100Al\
AlGaAs_10Al\
AlGaAs_20Al\
AlGaAs_30Al\
AlGaAs_40Al\
AlGaAs_50Al\
AlGaAs_60Al\
AlGaAs_70Al\
AlGaAs_80Al\
AlGaAs_90Al\
AlGaInP_0Al\
AlGaInP_100Al\
AlGaInP_10Al\
AlGaInP_30Al\
AlGaInP_60Al\
AlGaInP_70Al\
AlON\
AlSb\
AlSi\
AlSiTi\
aSi\
a-Si\
Au\
BaF2\
BK7\
CaF2\
Carbon\
CCl4\
CdSe\
CdTe\
CO\
CO2\
CoSi2\
Cr\
Cr3Si\
Cr5Si3\
CrSi2El2\
Cu\
Cu2O\
CuO\
Diamond\
ethanol\
FeSi2_1\
FeSi2_2\
FeSi2_3\
GaAs\
GaAsO\
GaP\
GaP_100\
GaPO\
GaSb\
GaSbO\
Ge\
Ge_100\
HfO2\
HfSi2\
HgCdTe_0Te\
HgCdTe_20Te\
HgCdTe_30Te\
ice\
InAs\
InAsO\
InGaAs\
InGaSb_0Ga\
InGaSb_100Ga\
InGaSb_10Ga\
InGaSb_30Ga\
InGaSb_50Ga\
InGaSb_70Ga\
InGaSb_90Ga\
InP\
InPO\
InSb\
INSbO\
Ir\
Ir3Si5_1\
Ir3Si5_2\
ITO\
KCl\
LASF9\
Li\
LiF\
methanol\
MgF2\
MO\
MoSi2_extraordinary\
MoSi2_ordinary\
NbSi_a\
NbSi_b\
Ni\
Ni2Si\
Ni3Si\
NiSi\
PbS\
PbSe\
PC\
Pd\
Pd2Si_extraordinary\
Pd2Si_ordinary\
PMMA\
Pt\
ReSi\
SF11\
Si_100\
Si_110\
Si_111\
Si11Ge89\
Si20Ge80\
Si28Ge72\
Si3N4\
Si65Ge35\
Si85Ge15\
Si98Ge02\
SiC\
SiCr\
SiGe_Ge\
SiGe_Si\
SiO\
SiO2\
Ta\
TaO_1\
TaO_2\
Te\
ThF4\
Ti\
TiNi\
TiO2\
TiSi\
V\
VSi2_a\
VSi2_b\
W\
water\
WSi2_a\
WSi2_b\
Y2O3\
ZnS\
ZnSe\
ZnSeTe_0Te\
ZnSeTe_100Te\
ZnSeTe_10Te\
ZnSeTe_30Te\
ZnSeTe_50Te\
ZnSeTe_70Te\
ZnSeTe_90Te\
ZrO2\
ZrSi2

EXTRA_DIST = $(spectra_DATA)

